[RHCLOUD-44593] Add severity filter on events api (#4062)